@@ -129,7 +129,7 @@ class version_info(NamedTuple):
 
 
 __version_info__ = version_info(3, 0, 8, "final", 0)
-__version_time__ = "21 Mar 2022 15:41 UTC"
+__version_time__ = "24 Mar 2022 23:39 UTC"
 __version__ = __version_info__.__version__
 __versionTime__ = __version_time__
 __author__ = "Paul McGuire <ptmcg.gm+pyparsing@gmail.com>"
